[gd_scene format=3 uid="uid://cyeops1juliqx"]

[ext_resource type="PackedScene" uid="uid://ciq4tbexrmakg" path="res://UI/animated_texture_rect.tscn" id="1_42eed"]
[ext_resource type="Script" uid="uid://rcibihvmenxa" path="res://UI/inventory/inventory_slot.gd" id="1_f5bh6"]

[node name="Control" type="Control" unique_id=283280269]
custom_minimum_size = Vector2(1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
script = ExtResource("1_f5bh6")

[node name="TextureRect" parent="." unique_id=1078481552 instance=ExtResource("1_42eed")]
layout_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=496204645]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="ContentTexture" parent="MarginContainer" unique_id=341345595 instance=ExtResource("1_42eed")]
layout_mode = 2

[node name="Button" type="Button" parent="." unique_id=1406761271]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
